--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -13,7 +13,7 @@
   <name>demo</name>
   <description>Demo project for Spring Boot</description>
   <properties>
-    <java.version>1.8</java.version>
+    <java.version>11</java.version>
   </properties>
   <dependencies>
     <dependency>
@@ -55,6 +55,16 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <scope>annotationProcessor</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-hateoas</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
   <build>
